--- a/ArtifactManager/ArtifactManager.csproj
+++ b/ArtifactManager/ArtifactManager.csproj
@@ -58,6 +58,12 @@
         <Compile Include="FrontPage.Designer.cs">
             <DependentUpon>FrontPage.cs</DependentUpon>
         </Compile>
+        <Compile Include="PasswordChange.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="PasswordChange.Designer.cs">
+          <DependentUpon>PasswordChange.cs</DependentUpon>
+        </Compile>
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Settings.cs" />
@@ -88,6 +94,9 @@
         <EmbeddedResource Include="FrontPage.resx">
           <DependentUpon>FrontPage.cs</DependentUpon>
         </EmbeddedResource>
+        <EmbeddedResource Include="PasswordChange.resx">
+          <DependentUpon>PasswordChange.cs</DependentUpon>
+        </EmbeddedResource>
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -105,6 +114,9 @@
         </EmbeddedResource>
         <EmbeddedResource Include="UserFP.resx">
           <DependentUpon>UserFP.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="UserProfile.resx">
+          <DependentUpon>UserProfile.cs</DependentUpon>
         </EmbeddedResource>
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
