--- a/ArtifactManager/ArtifactManager.csproj
+++ b/ArtifactManager/ArtifactManager.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+    <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
     <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -33,7 +34,16 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+          <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
+        <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+          <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+          <Private>True</Private>
+        </Reference>
         <Reference Include="System" />
+        <Reference Include="System.ComponentModel.DataAnnotations" />
         <Reference Include="System.Core" />
         <Reference Include="System.Xml.Linq" />
         <Reference Include="System.Data.DataSetExtensions" />
@@ -46,57 +56,57 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="AdminFP.cs">
-          <SubType>Form</SubType>
-        </Compile>
-        <Compile Include="AdminFP.Designer.cs">
-          <DependentUpon>AdminFP.cs</DependentUpon>
-        </Compile>
-        <Compile Include="FrontPage.cs">
-            <SubType>Form</SubType>
-        </Compile>
-        <Compile Include="FrontPage.Designer.cs">
-            <DependentUpon>FrontPage.cs</DependentUpon>
-        </Compile>
-        <Compile Include="PasswordChange.cs">
-          <SubType>Form</SubType>
-        </Compile>
-        <Compile Include="PasswordChange.Designer.cs">
-          <DependentUpon>PasswordChange.cs</DependentUpon>
-        </Compile>
+        <Compile Include="Classes\Register.cs" />
+        <Compile Include="Classes\Settings.cs" />
+        <Compile Include="DataBase\Context\MyDbContext.cs" />
+        <Compile Include="DataBase\Model\Category.cs" />
+        <Compile Include="DataBase\Model\Element.cs" />
+        <Compile Include="DataBase\Model\User.cs" />
+        <Compile Include="Migrations\Configuration.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="Settings.cs" />
-        <Compile Include="Login.cs">
+        <Compile Include="Forms\AdminFP.cs">
           <SubType>Form</SubType>
         </Compile>
-        <Compile Include="Login.Designer.cs">
+        <Compile Include="Forms\AdminFP.Designer.cs">
+          <DependentUpon>AdminFP.cs</DependentUpon>
+        </Compile>
+        <Compile Include="Forms\FrontPage.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="Forms\FrontPage.Designer.cs">
+          <DependentUpon>FrontPage.cs</DependentUpon>
+        </Compile>
+        <Compile Include="Forms\Login.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="Forms\Login.Designer.cs">
           <DependentUpon>Login.cs</DependentUpon>
         </Compile>
-        <Compile Include="Register.cs">
+        <Compile Include="Forms\PasswordChange.cs">
           <SubType>Form</SubType>
         </Compile>
-        <Compile Include="Register.Designer.cs">
+        <Compile Include="Forms\PasswordChange.Designer.cs">
+          <DependentUpon>PasswordChange.cs</DependentUpon>
+        </Compile>
+        <Compile Include="Forms\Register.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="Forms\Register.Designer.cs">
           <DependentUpon>Register.cs</DependentUpon>
         </Compile>
-        <Compile Include="UserFP.cs">
+        <Compile Include="Forms\UserFP.cs">
           <SubType>Form</SubType>
         </Compile>
-        <Compile Include="UserFP.Designer.cs">
+        <Compile Include="Forms\UserFP.Designer.cs">
           <DependentUpon>UserFP.cs</DependentUpon>
         </Compile>
-        <Compile Include="UserProfile.cs">
+        <Compile Include="Forms\UserProfile.cs">
           <SubType>Form</SubType>
         </Compile>
-        <Compile Include="UserProfile.Designer.cs">
+        <Compile Include="Forms\UserProfile.Designer.cs">
           <DependentUpon>UserProfile.cs</DependentUpon>
         </Compile>
-        <EmbeddedResource Include="FrontPage.resx">
-          <DependentUpon>FrontPage.cs</DependentUpon>
-        </EmbeddedResource>
-        <EmbeddedResource Include="PasswordChange.resx">
-          <DependentUpon>PasswordChange.cs</DependentUpon>
-        </EmbeddedResource>
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
             <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -106,18 +116,25 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
-        <EmbeddedResource Include="Login.resx">
+        <EmbeddedResource Include="Forms\FrontPage.resx">
+          <DependentUpon>FrontPage.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="Forms\Login.resx">
           <DependentUpon>Login.cs</DependentUpon>
         </EmbeddedResource>
-        <EmbeddedResource Include="Register.resx">
+        <EmbeddedResource Include="Forms\PasswordChange.resx">
+          <DependentUpon>PasswordChange.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="Forms\Register.resx">
           <DependentUpon>Register.cs</DependentUpon>
         </EmbeddedResource>
-        <EmbeddedResource Include="UserFP.resx">
+        <EmbeddedResource Include="Forms\UserFP.resx">
           <DependentUpon>UserFP.cs</DependentUpon>
         </EmbeddedResource>
-        <EmbeddedResource Include="UserProfile.resx">
+        <EmbeddedResource Include="Forms\UserProfile.resx">
           <DependentUpon>UserProfile.cs</DependentUpon>
         </EmbeddedResource>
+        <None Include="packages.config" />
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
             <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -132,4 +149,12 @@
         <None Include="App.config" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+    <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+      <PropertyGroup>
+        <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105.The missing file is {0}.</ErrorText>
+      </PropertyGroup>
+      <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+      <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
+    </Target>
+    <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
 </Project>
