sth working, sth not

--- a/ArtifactManager/ArtifactManager.csproj
+++ b/ArtifactManager/ArtifactManager.csproj
@@ -60,9 +60,12 @@
         <Compile Include="Classes\Settings.cs" />
         <Compile Include="DataBase\Context\MyDbContext.cs" />
         <Compile Include="DataBase\Context\MyDbContextFunctions.cs" />
+        <Compile Include="DataBase\Model\Attribute.cs" />
         <Compile Include="DataBase\Model\Category.cs" />
         <Compile Include="DataBase\Model\Element.cs" />
+        <Compile Include="DataBase\Model\Instance.cs" />
         <Compile Include="DataBase\Model\Permission.cs" />
+        <Compile Include="DataBase\Model\Property.cs" />
         <Compile Include="DataBase\Model\Role.cs" />
         <Compile Include="DataBase\Model\User.cs" />
         <Compile Include="Forms\AddEditArtifact.cs">
@@ -77,13 +80,21 @@
         <Compile Include="Forms\Catalog.Designer.cs">
           <DependentUpon>Catalog.cs</DependentUpon>
         </Compile>
-        <Compile Include="Migrations\202205180924433_user.cs" />
-        <Compile Include="Migrations\202205180924433_user.Designer.cs">
-          <DependentUpon>202205180924433_user.cs</DependentUpon>
+        <Compile Include="Migrations\202205181155375_kurwaXD.cs" />
+        <Compile Include="Migrations\202205181155375_kurwaXD.Designer.cs">
+          <DependentUpon>202205181155375_kurwaXD.cs</DependentUpon>
         </Compile>
-        <Compile Include="Migrations\202205180948287_db.cs" />
-        <Compile Include="Migrations\202205180948287_db.Designer.cs">
-          <DependentUpon>202205180948287_db.cs</DependentUpon>
+        <Compile Include="Migrations\202205181419064_xdddd.cs" />
+        <Compile Include="Migrations\202205181419064_xdddd.Designer.cs">
+          <DependentUpon>202205181419064_xdddd.cs</DependentUpon>
+        </Compile>
+        <Compile Include="Migrations\202205181930146_KURWA.cs" />
+        <Compile Include="Migrations\202205181930146_KURWA.Designer.cs">
+          <DependentUpon>202205181930146_KURWA.cs</DependentUpon>
+        </Compile>
+        <Compile Include="Migrations\202205182103420_xd.cs" />
+        <Compile Include="Migrations\202205182103420_xd.Designer.cs">
+          <DependentUpon>202205182103420_xd.cs</DependentUpon>
         </Compile>
         <Compile Include="Migrations\Configuration.cs" />
         <Compile Include="Program.cs" />
@@ -133,11 +144,17 @@
         <EmbeddedResource Include="Forms\Catalog.resx">
           <DependentUpon>Catalog.cs</DependentUpon>
         </EmbeddedResource>
-        <EmbeddedResource Include="Migrations\202205180924433_user.resx">
-          <DependentUpon>202205180924433_user.cs</DependentUpon>
+        <EmbeddedResource Include="Migrations\202205181155375_kurwaXD.resx">
+          <DependentUpon>202205181155375_kurwaXD.cs</DependentUpon>
         </EmbeddedResource>
-        <EmbeddedResource Include="Migrations\202205180948287_db.resx">
-          <DependentUpon>202205180948287_db.cs</DependentUpon>
+        <EmbeddedResource Include="Migrations\202205181419064_xdddd.resx">
+          <DependentUpon>202205181419064_xdddd.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="Migrations\202205181930146_KURWA.resx">
+          <DependentUpon>202205181930146_KURWA.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="Migrations\202205182103420_xd.resx">
+          <DependentUpon>202205182103420_xd.cs</DependentUpon>
         </EmbeddedResource>
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
