--- a/ArtifactManager/ArtifactManager.csproj
+++ b/ArtifactManager/ArtifactManager.csproj
@@ -68,6 +68,12 @@
         <Compile Include="DataBase\Model\Role.cs" />
         <Compile Include="DataBase\Model\User.cs" />
         <Compile Include="DataBase\Model\UserCategory.cs" />
+        <Compile Include="Forms\AddCategory.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="Forms\AddCategory.Designer.cs">
+          <DependentUpon>AddCategory.cs</DependentUpon>
+        </Compile>
         <Compile Include="Forms\AddEditArtifact.cs">
           <SubType>Form</SubType>
         </Compile>
@@ -129,6 +135,9 @@
         <Compile Include="Forms\UserProfile.Designer.cs">
           <DependentUpon>UserProfile.cs</DependentUpon>
         </Compile>
+        <EmbeddedResource Include="Forms\AddCategory.resx">
+          <DependentUpon>AddCategory.cs</DependentUpon>
+        </EmbeddedResource>
         <EmbeddedResource Include="Forms\Catalog.resx">
           <DependentUpon>Catalog.cs</DependentUpon>
         </EmbeddedResource>
